--- a/section_Brief_introduction_to_machine__1.tex
+++ b/section_Brief_introduction_to_machine__1.tex
@@ -10,11 +10,21 @@ It is divided into two main categories: Supervised and Unsupervised Learning. Th
 
 The second type of problems is where the output $Y$ is missing altogether from the data. In this scenario the most common objectives are clustering samples, density estimation and data compression. Linear regression and K-means clustering are examples of algorithms in each of these categories respectively.
 
-Supervised learning is then sub-categorized according to the type of information available in the data for the task at hand. When the type of the output variable $Y$ takes a discrete set of values then it is said that it is a supervised classification problem. On the other hand, when the output takes continuous (or dense in an open set of $\mathbb{R}$) range of \textit{quantitative} values, the problem is said to be of supervised regression. Note that regression problems can be encoded into classification problems by assigning categories to ranges of outputs.For this work we will focus on the supervised aspect of machine learning.
+Supervised learning can also be sub-categorized according to the nature of the problem. When the type of the output variable $Y$ takes a discrete set of values then it is said that it is a supervised \textit{classification} problem. On the other hand, when the output takes continuous (or dense in an open set of $\mathbb{R}$) range of \textit{quantitative} values, the problem is said to be of supervised \textit{regression}. Note that regression problems can be encoded into classification problems by grouping the output values into ranges  as categories. For this work we will focus on the classification aspect of machine learning.
 
 Suppose our objective is to predict $y$ given a new sample $x$. In supervised regression problems, $y$ will comprise a continuous variable. for classification problems on the other hand, $y$ will represent a label for a certain class. For the case of $K$ classes, $y$ most commonly takes values in the ranges $0$ through $K-1$  or $1$ through $K$. In both cases, the joint probability distribution $p(X, Y)$, called the \textit{true} distribution, gives all of the information we need on these two variables. However the values of this probability is most often unknown. The idea is to then user estimations and inference on the most likely values for new samples and take decisions with the information at hand. These decisions will be based on the most probabilistic characterization of the data we have. 
 
-In these type of problems the theoretical and the computational aspect are both of interest. Algorithms are generally applied in a given setting and, as such, are expected to be executed in a reasonable amount of time and with a certain level of performance. \footnote{Here the word \textit{reasonable} is used in a broad sense. It will depend entirely on time constraints, computational capacity, usage and other aspects of each learning application.} In its essence, the machine learning method is a probabilistic model so it is very much the same as a statistical model. However, it differs specially in that its focus is generally on the models' predictive abilities more than in the model's parameters estimates.\cite{breiman-statisticalmodeling} The algorithms will be built and used to try and replicate as best as possible a given phenomena, without really identifying the true nature of the mechanisms behind this phenomena. As such, most applications will try to generalize a problem rather than identify the system behind it. Computational efficenciy and \textit{scalabiilty} will also be of great importance when working with these applications. However only brief references to this matter will be given in this work.
+In these type of problems the theoretical and the computational aspect are both of interest. The algorithms used need to consider the technical requirements of the software and hardware being used, as well as the constrains imposed by the problem setting. As such, they are expected to be executed in a reasonable amount of time, imposed by the task specification, and limited by the computing power at hand. \footnote{Here the word \textit{reasonable} is used in a broad sense. It will depend entirely on time constraints, computational capacity, usage and other aspects of each learning application.} There are problems which require that the algorithm output predictions in \textit{real-time], to the resolution of mili-seconds. Imagine the case where a credit-card transaction needs to be approved or labeled as fraud. Here the system needs to respond in short time if the transaction is fraudulent. Other use cases might require the system to process a big volume of data at once, not a single event, but a batch of these and output this answer. The system in use needs to be prepared to run \textit{lean} witha big inflow of data, without crashing the machine. These short examples show that there are multiple algorithms to chose from in a supervised learning problem. And while all of them are theoretically doing the same task , we must also evaluate the practical strengths of these 
+algorithmother important 
+on which might 
+
+For all of these cases, 
+
+Other problems might require  
+For example
+This means that when evaluating to different Machine Learning solutions, there are
+
+In its essence, the machine learning method is a probabilistic model so it is very much the same as a statistical model. However, it differs specially in that its focus is generally on the models' predictive abilities more than in the model's parameters estimates.\cite{breiman-statisticalmodeling} The algorithms will be built and used to try and replicate as best as possible a given phenomena, without really identifying the true nature of the mechanisms behind this phenomena. As such, most applications will try to generalize a problem rather than identify the system behind it. Computational efficenciy and \textit{scalabiilty} will also be of great importance when working with these applications. However only brief references to this matter will be given in this work.
 %on this matter It also puts a great amount of weight on efficiency and computational scalability. 
 
 %At this point it is important to start noting
