--- a/section_Brief_introduction_to_machine__1.tex
+++ b/section_Brief_introduction_to_machine__1.tex
@@ -14,21 +14,15 @@ Supervised learning can also be sub-categorized according to the nature of the p
 
 Suppose our objective is to predict $y$ given a new sample $x$. In supervised regression problems, $y$ will comprise a continuous variable. for classification problems on the other hand, $y$ will represent a label for a certain class. For the case of $K$ classes, $y$ most commonly takes values in the ranges $0$ through $K-1$  or $1$ through $K$. In both cases, the joint probability distribution $p(X, Y)$, called the \textit{true} distribution, gives all of the information we need on these two variables. However the values of this probability is most often unknown. The idea is to then user estimations and inference on the most likely values for new samples and take decisions with the information at hand. These decisions will be based on the most probabilistic characterization of the data we have. 
 
-In these type of problems the theoretical and the computational aspect are both of interest. The algorithms used need to consider the technical requirements of the software and hardware being used, as well as the constrains imposed by the problem setting. As such, they are expected to be executed in a reasonable amount of time, imposed by the task specification, and limited by the computing power at hand. \footnote{Here the word \textit{reasonable} is used in a broad sense. It will depend entirely on time constraints, computational capacity, usage and other aspects of each learning application.} There are problems which require that the algorithm output predictions in \textit{real-time], to the resolution of mili-seconds. Imagine the case where a credit-card transaction needs to be approved or labeled as fraud. Here the system needs to respond in short time if the transaction is fraudulent. Other use cases might require the system to process a big volume of data at once, not a single event, but a batch of these and output this answer. The system in use needs to be prepared to run \textit{lean} witha big inflow of data, without crashing the machine. These short examples show that there are multiple algorithms to chose from in a supervised learning problem. And while all of them are theoretically doing the same task , we must also evaluate the practical strengths of these 
-algorithmother important 
-on which might 
+In this type of problems the theoretical and the computational aspect are both of interest. The algorithms used need to consider the technical requirements of the software and hardware being used, as well as the constrains imposed by the problem setting. As such, they are expected to be executed in a reasonable amount of time, imposed by the task specification, and limited by the computing power at hand. \footnote{Here the word \textit{reasonable} is used in a broad sense. It will depend entirely on time constraints, computational capacity, usage and other aspects of each learning application.} There are problems which require that the algorithm output predictions in \textit{real-time}, to the resolution of milliseconds. Picture a system where a credit-card transaction needs to be approved or labeled as fraud. Here the system needs to respond in short time if the transaction is fraudulent. 
 
-For all of these cases, 
+Other use cases might require the system to process a big volume of data at once, not a single event, but a batch of these and output this answer. The system in use needs to be prepared to run \textit{lean} with a large inflow of data, without crashing the available hardware.  These examples show that for a given problem, multiple algorithms are available to use but while all of them are theoretically doing the same task, we must also consider the practical advantages of these. Even though we won't delve into these aspects in this work, it has an important consideration in the application of Machine Learning soutions.
 
-Other problems might require  
-For example
-This means that when evaluating to different Machine Learning solutions, there are
-
-In its essence, the machine learning method is a probabilistic model so it is very much the same as a statistical model. However, it differs specially in that its focus is generally on the models' predictive abilities more than in the model's parameters estimates.\cite{breiman-statisticalmodeling} The algorithms will be built and used to try and replicate as best as possible a given phenomena, without really identifying the true nature of the mechanisms behind this phenomena. As such, most applications will try to generalize a problem rather than identify the system behind it. Computational efficenciy and \textit{scalabiilty} will also be of great importance when working with these applications. However only brief references to this matter will be given in this work.
-%on this matter It also puts a great amount of weight on efficiency and computational scalability. 
-
-%At this point it is important to start noting
-
-These subtle differences in the way of approaching a problem also reflect themselves in the terminology used. Here most terms have equivalent or similar notations in statistics. To start off, the \textit{dependent} $Y$ is called the target or label and the \textit{independent} variables, \textit{covariates} or \textit{input variables} are named \textit{features} in this case. 
-%Labels that are representing categorical or discrete variables are also named factors or \textit{qualitative} variables. 
-
+	
+	In its essence, a machine learning method is a probabilistic model so it is very much the same as a statistical model. However, it differs specially in that its focus is generally on the models' predictive abilities more than in the model's parameters estimates.\cite{breiman-statisticalmodeling} The algorithms will be built and used to try and replicate as best as possible a given phenomena, without really identifying the true nature of the mechanisms behind this phenomena. As such, most applications will try to generalize a problem rather than identify the system behind it. Computational efficenciy and \textit{scalabiilty} will also be of great importance when working with these applications. However only brief references to this matter will be given in this work.
+	%on this matter It also puts a great amount of weight on efficiency and computational scalability. 
+	
+	%At this point it is important to start noting
+	
+	These subtle differences in the way of approaching a problem also reflect themselves in the terminology used. Here most terms have equivalent or similar notations in statistics. To start off, the \textit{dependent} $Y$ is called the target or label and the \textit{independent} variables, \textit{covariates} or \textit{input variables} are named \textit{features} in this case. 
+	%Labels that are representing categorical or discrete variables are also named factors or \textit{qualitative} variables. 
